-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 4.0.0-beta1
-
Windows 7 64 bit
- Go to "Tools" -> "Options..." -> "Environment" -> "Interface".
- See which Theme is currently set in the combo box, then change it to a different one.
- Click "OK" and confirm the message box with "OK" as well.
- Go to "Tools" -> "Options..." -> "Environment" -> "Interface" again.
The combo box displays the Theme which was selected before changing it.
Instead, the combo should show the Theme you selected in step 2.
For Gerrit Dashboard: QTCREATORBUG-15852 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
175375,2 | Theme Settings: Fix that options page switched back to current theme | 4.2 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |