Theme Settings: Fix that options page switched back to current theme

- Changing the theme settings and reopening options page switched back
  to current theme
- When passing a theme on the command line, closing the options dialog
  would state that the theme change takes effect after restart, even if
  theme was not changed

Fix these issues by showing the current theme setting in the options
page, ignoring the currently active theme, and showing a label telling
the currently active theme instead.

Task-number: QTCREATORBUG-15852
Change-Id: I343fc729c33f17fcb15a8e9facd7a49076d0e0d1
Reviewed-by: Leena Miettinen <riitta-leena.miettinen@qt.io>
Reviewed-by: Alessandro Portale <alessandro.portale@qt.io>